# paasify

./: .cz.toml  .dockerignore  .envrc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  Taskfile.yml  VERSION_NOTES.md  build_target.sh  index.html  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  tmp.md
.github/workflows/: _build.yml  _install.yaml  _install.yml  _install2.yml  _release.yml  _test.yml  _test2.yml  _test_many.yml  build.yml  develop.yml  publish_main.yaml  publish_main.yml  publish_tag.yaml  release.yaml  release.yml  release_dev.yaml  release_main.yaml  test.yaml  test.yml
develop/: install.md.backup
develop/conduct_code/: index.html
develop/docs/: index.html
develop/install/: index.html
develop/intro/: index.html
develop/paasify/: index.html
develop/ref/: index.html
develop/release/: index.html
docker/: Dockerfile.build  Dockerfile.dev  Dockerfile.doc  Dockerfile.doc-root
docs/: .gitignore  README.md  Taskfile.yml  doc_schema_html.yml  doc_schema_md.yml  docker-compose.yaml  gen_apidoc.py  gen_apidoc.sh  mkdocs.yml  serve_mkdocs.sh
docs/best_practices/: index.html
docs/concepts/: index.html
docs/configuration/: index.html
docs/distribute/: index.html
docs/extend/: index.html
docs/faq/: index.html
docs/install/: index.html
docs/internals/: index.html
docs/src/: index.md
docs/src/about/: contribute.md  development.md  license.md
docs/src/css/: mkdocstrings.css
docs/src/develop/: docs.md  install.md  intro.md  paasify.md  ref.md  release.md
docs/src/docs/: advanced.md  best_practices.md  concepts.md  configuration.md  distribute.md  extend.md  faq.md  install.md  usage.md
docs/src/jupyter/: learn_101.ipynb  serve_jupyter.sh
docs/src/plugins_apidoc/_paasify/: jsonschema.json  jsonschema.yml  markdown.md  web.html
docs/src/plugins_apidoc/test-paasify-api/: jsonschema.json  jsonschema.yml  markdown.md  web.html
docs/src/plugins_apidoc/traefik-svc/: jsonschema.json  markdown.md  web.html
docs/src/refs/: cli_usage.md  extend_base.md  extend_tags.md  index.md  license.md  python_api_app.md  python_api_other.md  python_api_project.md  schema_app.md  schema_prj.md  schema_prj_config.md  schema_prj_sources.md  schema_prj_stacks.md
docs/src/refs/config/: paasify_app_schema.html  paasify_app_schema.md  paasify_prj_config_schema.html  paasify_prj_config_schema.md  paasify_prj_schema.html  paasify_prj_schema.md  (+4 more)
docs/src/schema_doc/: paasify_yml_schema.html  paasify_yml_schema.json  paasify_yml_schema.md  paasify_yml_schema.yml
docs/src/static/: paasify.js
docs/src/tutorial/: best_practices.md  quickstart.md
docs/usage/: index.html
examples/: clean_path_before_commit.sh
examples/ex3/devbox_core/: .gitignore  paasify.yml
jupyter/learn_101/: index.html
paasify/: __init__.py  app.py  app2.py  cli.py  collections.py  common.py  engines.py  errors.py  framework.py  projects.py  sources.py  stack_components.py  stacks.py  stacks2.py  vars.py  version.py
paasify/assets/: gitignore  paasify.yml
paasify/assets/plugins/: _paasify.jsonnet  docker-net-attach.jsonnet  docker-net-provide.jsonnet  paasify.libsonnet  traefik-svc.jsonnet
paasify_apidoc/: conf_app.html  conf_app.json  conf_prj.html  conf_prj.json  conf_prj_config.html  conf_prj_config.json  conf_prj_sources.html  conf_prj_sources.json  conf_prj_stacks.html  conf_prj_stacks.json
plugins_apidoc/: index.html  jsonnet_docker-debug.html  jsonnet_docker-debug.json  jsonnet_docker-net-attach.html  jsonnet_docker-net-attach.json  jsonnet_example.html  jsonnet_example.json  jsonnet_homepage.html  jsonnet_homepage.json  jsonnet_mysql-adminer.html  jsonnet_mysql-adminer.json  jsonnet_traefik-mw.html  jsonnet_traefik-mw.json  jsonnet_traefik-svc.html  jsonnet_traefik-svc.json
plugins_apidoc/_paasify/: jsonschema.json  web.html
plugins_apidoc/_paasify/markdown/: index.html
plugins_apidoc/app_debug/: index.html
plugins_apidoc/app_dns/: index.html
plugins_apidoc/app_dummy/: index.html
plugins_apidoc/app_example/: index.html
plugins_apidoc/app_home/: index.html
plugins_apidoc/app_network/: index.html
plugins_apidoc/app_proxy/: index.html
plugins_apidoc/jsonnet_docker-debug/: index.html
plugins_apidoc/jsonnet_docker-net-attach/: index.html
plugins_apidoc/jsonnet_example/: index.html
plugins_apidoc/jsonnet_homepage/: index.html
plugins_apidoc/jsonnet_mysql-adminer/: index.html
plugins_apidoc/jsonnet_traefik-mw/: index.html
plugins_apidoc/jsonnet_traefik-svc/: index.html
plugins_apidoc/test-paasify-api/: jsonschema.json  web.html
plugins_apidoc/test-paasify-api/markdown/: index.html
plugins_apidoc/traefik-svc/: jsonschema.json  jsonschema.yml  web.html  web2.html
plugins_apidoc/traefik-svc/markdown/: index.html
refs/: index.html
refs/changelog/: index.html
refs/cli_usage/: index.html
refs/extend_base/: index.html
refs/extend_tags/: index.html
refs/license/: index.html
refs/python_api_app/: index.html
refs/python_api_other/: index.html
refs/python_api_project/: index.html
refs/raw/: cli_usage.txt
refs/schema_app/: index.html
refs/schema_prj/: index.html
refs/schema_prj_config/: index.html
refs/schema_prj_sources/: index.html
refs/schema_prj_stacks/: index.html
schema_doc/paasify_yml_schema/: index.html
scripts/: Taskfile.dev.yml  activate.sh  bootstrap_deps.sh  bump.sh  gen_favicon.sh  platform.sh  publish_gh.sh
search/: search_index.json
static/: mkdocstrings.css  schema_expand.js
tests/: common_lib.py  test_base.py  test_cli.py
tests/examples/: RUN_TEST.sh
tests/examples/minimal/: paasify.yml
tests/examples/real_tests/: .gitignore  RUN_TEST.sh  paasify.yml  vars.test.yml
tests/examples/unit_stacks_idents/: paasify.yml
tests/examples/unit_stacks_idents_dup_fail/: paasify.yml
tests/examples/var_merge/: paasify.yml
tests/test_base/: test_stacks_resolution.yml  test_stacks_vars.yml
tests/test_cli/: test_cli_cmd_inside_basics_real_tests_.yml
tutorial/quickstart/: index.html
(+88 files in other folders)
